book and collection response normalized
